feat: dashborad and new filer func added